# x86-bad-apple

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
bad_apple_encoder/: Cargo.toml
bad_apple_encoder/src/: main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  rle.rs  vga.rs
src/: main.rs
test_data_generator/: Cargo.toml
test_data_generator/src/: main.rs
