[package]
name = "useless-os"
version = "0.1.0"
edition = "2021"
#build-std = ["core", "compiler_builtins", "alloc", "std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]

